# nlp-text-classifier

./: .gitignore  README.md  app.py  predict.py  pyproject.toml  setup_and_push.bat  train.py
.streamlit/: config.toml
notebooks/: day10_feature_engineering.ipynb  day11_final_model.ipynb  day12_streamlit_app.ipynb  day8_news_eda_preprocessing.ipynb  day9_baseline_tfidf.ipynb
src/: __init__.py  inference.py  model_resolve.py  nlp_utils_news.py  pipeline_news.py
